fixed horizontal scroll problem on mobile

--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -162,9 +162,8 @@
   align-items: center;
   flex-direction: column;
   padding: 1rem;
-  // position: fixed;
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 800px) {
     display: none;
   }
 
@@ -188,7 +187,7 @@
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .app__social {
     width: 100%;
     flex-direction: row;
@@ -199,18 +198,18 @@
 }
 }
 
-  @media screen and (max-width: 375px) {
-    .app__social button{
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
-      justify-content: center;
-      align-items: center;
-      padding: 0 0 1px 4.5px;
-      
-      span {
-        display: none;
-      }
+@media screen and (max-width: 375px) {
+  .app__social button{
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    padding: 0 0 1px 4.5px;
+    
+    span {
+      display: none;
+    }
   }
 }
 
