--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -105,6 +105,7 @@
     height: 75vh;
     object-fit: contain;
     z-index: 1;
+    overflow: hidden;
   }
 
   .overlay_circle {
